src/scss/grommet-core/_objects.box.scss
/* ... */
// Outer context

.#{$grommet-namespace}box__container {
  padding-left: $inuit-base-spacing-unit;
  padding-right: $inuit-base-spacing-unit;
}

.#{$grommet-namespace}app--centered .#{$grommet-namespace}box__container >
  .#{$grommet-namespace}box {
  width: 100%;
  max-width: $center-column-width;
  margin-left: auto;
  margin-right: auto;

  @include media-query(palm) {
    padding-left: 0px;
    padding-right: 0px;
  }
}

.#{$grommet-namespace}box__container--full {
  max-width: 100%;
  width: 100vw;
}

.#{$grommet-namespace}box__container--full-horizontal {
  max-width: 100%;
  width: 100vw;
}

// Sizing

// flex-grow, flex-shrink

.#{$grommet-namespace}box--flex {
  flex: 1 1;
  // need to fix flexbox issue with min-width: auto for some tags
  min-width: 0;
}

.#{$grommet-namespace}box--flex-off {
  flex: 0 0 auto;
}

.#{$grommet-namespace}box--flex-grow {
  flex: 1 0;

  &:not([class^=".#{$grommet-namespace}box--basis"]) {
    flex-basis: auto;
  }

  // need to fix flexbox issue with min-width: auto for some tags
  min-width: 0;
}

// not necessary since this is the default
.#{$grommet-namespace}box--flex-shrink {
  flex: 0 1;
}

// flex-basis

.#{$grommet-namespace}box--basis-xsmall {
  flex-basis: $size-xsmall;
}

.#{$grommet-namespace}box--basis-small {
  flex-basis: $size-small;
}

.#{$grommet-namespace}box--basis-medium {
  flex-basis: $size-medium;
}

.#{$grommet-namespace}box--basis-large {
  flex-basis: $size-large;
}

.#{$grommet-namespace}box--basis-xlarge {
  flex-basis: $size-xlarge;
}

.#{$grommet-namespace}box--basis-xxlarge {
  flex-basis: $size-xxlarge;
}

.#{$grommet-namespace}box--basis-full {
  flex-basis: 100%;
}

.#{$grommet-namespace}box--basis-1-2 {
  flex-basis: 50%;
}

.#{$grommet-namespace}box--basis-1-3 {
  flex-basis: 33.33%;
}

.#{$grommet-namespace}box--basis-2-3 {
  flex-basis: 66.66%;

}

.#{$grommet-namespace}box--basis-1-4 {
  flex-basis: 25%;

  @include media-query(portable) { // needed?
    flex-basis: 50%;
  }
}

.#{$grommet-namespace}box--basis-3-4 {
  flex-basis: 75%;
}

// width

.#{$grommet-namespace}box--width-xsmall {
  width: $size-xsmall;
}

.#{$grommet-namespace}box--width-small {
  width: $size-small;
}

.#{$grommet-namespace}box--width-medium {
  width: $size-medium;
}

.#{$grommet-namespace}box--width-large {
  width: $size-large;
}

.#{$grommet-namespace}box--width-xlarge {
  width: $size-xlarge;
}

.#{$grommet-namespace}box--width-xxlarge {
  width: $size-xxlarge;
}

// height

.#{$grommet-namespace}box--height-xsmall {
  height: $size-xsmall;
}

.#{$grommet-namespace}box--height-small {
  height: $size-small;
}

.#{$grommet-namespace}box--height-medium {
  height: $size-medium;
}

.#{$grommet-namespace}box--height-large {
  height: $size-large;
}

.#{$grommet-namespace}box--height-xlarge {
  height: $size-xlarge;
}

.#{$grommet-namespace}box--height-xxlarge {
  height: $size-xxlarge;
}

// min-width

.#{$grommet-namespace}box--width-min-xsmall {
  min-width: $size-xsmall;
}

.#{$grommet-namespace}box--width-min-small {
  min-width: $size-small;
}

.#{$grommet-namespace}box--width-min-medium {
  min-width: $size-medium;
}

.#{$grommet-namespace}box--width-min-large {
  min-width: $size-large;
}

.#{$grommet-namespace}box--width-min-xlarge {
  min-width: $size-xlarge;
}

.#{$grommet-namespace}box--width-min-xxlarge {
  min-width: $size-xxlarge;
}

// max-width

.#{$grommet-namespace}box--width-max-xsmall {
  max-width: $size-xsmall;
}

.#{$grommet-namespace}box--width-max-small {
  max-width: $size-small;
}

.#{$grommet-namespace}box--width-max-medium {
  max-width: $size-medium;
}

.#{$grommet-namespace}box--width-max-large {
  max-width: $size-large;
}

.#{$grommet-namespace}box--width-max-xlarge {
  max-width: $size-xlarge;
}

.#{$grommet-namespace}box--width-max-xxlarge {
  max-width: $size-xxlarge;
}

// max-height

.#{$grommet-namespace}box--height-max-xsmall {
  max-height: $size-xsmall;
}

.#{$grommet-namespace}box--height-max-small {
  max-height: $size-small;
}

.#{$grommet-namespace}box--height-max-medium {
  max-height: $size-medium;
}

.#{$grommet-namespace}box--height-max-large {
  max-height: $size-large;
}

.#{$grommet-namespace}box--height-max-xlarge {
  max-height: $size-xlarge;
}

.#{$grommet-namespace}box--height-max-xxlarge {
  max-height: $size-xxlarge;
}

// min-height

.#{$grommet-namespace}box--height-min-xsmall {
  min-height: $size-xsmall;
}

.#{$grommet-namespace}box--height-min-small {
  min-height: $size-small;
}

.#{$grommet-namespace}box--height-min-medium {
  min-height: $size-medium;
}

.#{$grommet-namespace}box--height-min-large {
  min-height: $size-large;
}

.#{$grommet-namespace}box--height-min-xlarge {
  min-height: $size-xlarge;
}

.#{$grommet-namespace}box--height-min-xxlarge {
  min-height: $size-xxlarge;
}

// full

.#{$grommet-namespace}box--full {
  position: relative;
  max-width: 100%;
  width: 100vw;
  min-height: 100vh;
  height: 100%;

  // IE11 specific fix for aligning content vertically centered
  // height gets over written by the > min-height
  @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
    height: 50vh;
  }
}

.#{$grommet-namespace}box--full-horizontal {
  max-width: 100%;
  width: 100vw;
}

.#{$grommet-namespace}box--full-vertical {
  min-height: 100vh;

  // IE11 specific fix for aligning content vertically centered
  // height gets over written by the > min-height
  @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
    min-height: 100vh;
    height: 50vh;
  }
}

.#{$grommet-namespace}box--size {
  max-width: 100%;
  max-height: 100%;

  // deprecate? remove?
  .#{grommet-namespace}paragraph {
    width: 100%;
    max-width: 100%;
    flex: 0 0 auto;
  }
}

// deprecated use of the 'size' property

.#{$grommet-namespace}box--size-xsmall {
  width: $size-xsmall;
}

.#{$grommet-namespace}box--size-small {
  width: $size-small;
}

.#{$grommet-namespace}box--size-medium {
  width: $size-medium;
}
/* ... */

